--- a/lesson06/package.json
+++ b/lesson06/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.3.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
